<resources>
    <!-- Strings de Angelo -->
    <string name="app_name">CineYa</string>
    <string name="correoLogin">Correo:</string>
    <string name="contraseniaLogin">Contraseña:</string>
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="nombreRegistro">Nombre Completo:</string>
    <string name="telefonoRegistro">Telèfono:</string>
    <string name="correoRegistro">Correo:</string>
    <string name="contraseniaRegistro">Contraseña:</string>
    <string name="repetirContraseniaRegistro">Repetir Contraseña:</string>
    <string name="registrarse">Registrarse</string>
    <string name="ingresar">Ingresar</string>
    <string name="volver">Volver</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="menu">Menú</string>
    <string name="inicio">Inicio</string>
    <string name="perfil">Perfil</string>
    <string name="miscompras">Mis Compras</string>
    <string name="haztesocio">Hazte Socio</string>
    <string name="siguiente">Siguiente</string>

    <!-- -->
    <string name="correo">mail@mail.com.pe</string>
    <string name="contraseña">Contraseña:</string>
    <string name="contraseñaEncriptada">**********</string>



    <string name="nombrecompleto">Nombre y Apellido</string>
    <string name="telefono">(+51) 999-999-999</string>
    <string name="repetircontraseña">Repetir Contraseña:</string>


    <string name="nombre">Perfil Usuario</string>
    <string name="eliminarCuenta">Eliminar Cuenta</string>
    <string name="modificar">Modificar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Detalle Película -->
    <string name="tituloPelicula">Fast And Furious X</string>
    <string name="director">Jorge Estrada Casemiro</string>
    <string name="genero">Acciòn-Aventura</string>
    <string name="duracion">1h 24min</string>
    <string name="disponible">Regular, 3D, Prime</string>
    <string name="description">Durante numerosas misiones màs que imposibles, Don Toretto y su familia han sido capaces de ser mas listos, de tener màs valor de ir màs rapido que cualquier enemigo</string>


    <!-- CineYa Card -->
    <string name="cine_ya_title">CineYa!</string>
    <string name="cine_ya_desc">Bienvenido a CINEYA!, tu aplicación de confianza para disfrutar de tus películas favoritas</string>
    <!-- CineYa Card Item -->
    <string name="cine_ya_card_title_placeholder">Titulo</string>
    <string name="cine_ya_card_text_placeholder">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt labore...</string>
    <string name="cine_ya_card_btn">Ver más</string>

    <!-- ReservarPelicula -->
    <string name="Reservar_Pelicula_Adultos_Precio">S/ s%</string>
    <string name="Reservar_Pelicula_Ninios_Precio">S/ s%</string>
    <string name="Reservar_Pelicula_Adultos_Mayores_Precio">S/ s%</string>
    <string name="Reservar_Pelicula_Total_Precio">S/ s%</string>


    <!-- Detalle Compra -->
    <string name="DetalleCOmpra">Detalle de la Compra</string>
    <string name="textosocio">Estas a punto de convertirte en socio, recuerda que al subscribirte podras tener muchas facilidades y recibir notificaciones de las ultima peliculas. Ademas, podras realizar compras para la preventa.</string>
</resources>