<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_margin="8dp"
    android:clickable="true"
    android:focusable="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CineYaCardContainer"
        android:layout_width="match_parent"
        android:layout_height="121dp">


        <ImageView
            android:id="@+id/CineYaCardImg"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.003"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/cine_ya_card_text"
            android:layout_width="254dp"
            android:layout_height="51dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/cine_ya_card_text_placeholder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/CineYaCardImg"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.385" />

        <TextView
            android:id="@+id/cine_ya_card_title"
            android:layout_width="254dp"
            android:layout_height="27dp"
            android:layout_marginStart="197dp"
            android:text="@string/cine_ya_card_title_placeholder"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/cine_ya_card_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/CineYaCardImg"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/cine_ya_card_btn"
            android:layout_width="88dp"
            android:layout_height="41dp"
            android:text="@string/cine_ya_card_btn"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/cine_ya_card_text"
            app:layout_constraintTop_toBottomOf="@+id/cine_ya_card_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>